syntax = "proto3";

package cnn_model;

service CnnModel {
  rpc ScoreCnnModel(QueryRequest) returns (stream QueryReply) {}
}

message ScoreList {
    string query = 1;
    float prob = 2;
}

message QueryRequest {
  string query = 1;
}

message QueryReply {
  ScoreList scorelist = 1;
}
